--- a/TTerm/TTerm.ini
+++ b/TTerm/TTerm.ini
@@ -1,11 +1,14 @@
 [conexion]
-Other=..
+Other=.cmd.
 LineDelim=0
+LineDelimSnd=0
+LineDelimRcv=2
+Command=.cmd.
 
 [detPrompt]
-DetecPrompt=0
-cadIni=..
-cadFin=..
+DetecPrompt=1
+cadIni=.D:.
+cadFin=.>.
 TipDetec=0
 
 [panTerm]
@@ -13,6 +16,7 @@ maxLinTer=5000
 maxColTer=1000
 interDirec=1
 curSigPrm=1
+TpoMax=10
 
 [cfgMacros]
 TpoMax=10
