--- a/TTerm/TTerm.ini
+++ b/TTerm/TTerm.ini
@@ -1,14 +1,14 @@
 [conexion]
 Other=.cmd.
 LineDelim=0
-LineDelimSnd=0
+LineDelimSnd=2
 LineDelimRcv=2
-Command=.cmd.
+Command=.bash -i.
 
 [detPrompt]
 DetecPrompt=1
-cadIni=.D:.
-cadFin=.>.
+cadIni=..
+cadFin=..
 TipDetec=0
 
 [panTerm]
