--- a/TTerm/TTerm.lpi
+++ b/TTerm/TTerm.lpi
@@ -73,7 +73,7 @@
         <PackageName Value="LCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="9">
+    <Units Count="6">
       <Unit0>
         <Filename Value="TTerm.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -108,27 +108,6 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit5>
-      <Unit6>
-        <Filename Value="ConfigFrames\FrameCfgConex.pas"/>
-        <IsPartOfProject Value="True"/>
-        <ComponentName Value="fraConexion"/>
-        <HasResources Value="True"/>
-        <ResourceBaseClass Value="Frame"/>
-      </Unit6>
-      <Unit7>
-        <Filename Value="ConfigFrames\frameCfgDetPrompt.pas"/>
-        <IsPartOfProject Value="True"/>
-        <ComponentName Value="fraDetPrompt"/>
-        <HasResources Value="True"/>
-        <ResourceBaseClass Value="Frame"/>
-      </Unit7>
-      <Unit8>
-        <Filename Value="ConfigFrames\frameCfgPantTerm.pas"/>
-        <IsPartOfProject Value="True"/>
-        <ComponentName Value="fraPantTerm"/>
-        <HasResources Value="True"/>
-        <ResourceBaseClass Value="Frame"/>
-      </Unit8>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -139,7 +118,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="ConfigFrames;libraries;.."/>
+      <OtherUnitFiles Value="libraries;.."/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Parsing>
